[workspace]
resolver = "2"
members = [
    "node/core",
    "node/common",
    "node/dev",
    "node/testnet",
    "node/mainnet",
    "runtime/common",
    "runtime/dev",
    "runtime/testnet",
    "runtime/mainnet",
    "pallets/bfc-staking",
    "pallets/bfc-utility",
    "pallets/bfc-offences",
    "pallets/relay-manager",
    "pallets/btc-registration-pool",
    "pallets/btc-socket-queue",
    "pallets/blaze",
    "precompiles/bfc-staking",
    "precompiles/bfc-offences",
    "precompiles/relay-manager",
    "precompiles/governance",
    "precompiles/collective",
    "precompiles/balance",
    "precompiles/btc-registration-pool",
    "precompiles/btc-socket-queue",
    "precompiles/blaze",
    "pallets/bifrost-evm-tx-payment",
    "pallets/oracle-registry",
    "precompiles/bifrost-evm-tx-payment",
    "primitives/core",
    "primitives/bfc-staking",
    "primitives/btc-relay",
    "primitives/oracle",
]
[profile.release]
panic = "unwind"

[workspace.package]
authors = ["bifrost-platform"]
homepage = "https://www.bifrostnetwork.com"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-node"

[workspace.dependencies]
# General
substrate-fixed = { version = "0.6.0", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
    "derive",
    "serde",
] }
evm = { version = "0.43.4", default-features = false }
ethereum = { version = "0.18.2", default-features = false, features = [
    "with-scale",
] }
clap = { version = "4.5", features = ["derive"] }
hex = { version = "0.4.3", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
impl-serde = { version = "0.5.0", default-features = false }
serde = { version = "1.0", default-features = false }
jsonrpsee = { version = "0.24.9" }
log = { version = "0.4.21", default-features = false }
miniscript = { version = "12.3.1", default-features = false, features = [
    "no-std",
] }
ethabi-decode = { version = "2.0.0", default-features = false }
hex-literal = "0.4.1"
serde_json = "1.0"
futures = "0.3.31"
tokio = "1.45.0"
array-bytes = "6.1"

# Bifrost Primitive
bp-btc-relay = { default-features = false, path = "primitives/btc-relay" }
bp-core = { default-features = false, path = "primitives/core" }
bp-oracle = { default-features = false, path = "primitives/oracle" }
bp-staking = { default-features = false, path = "primitives/bfc-staking" }

# Bifrost Runtime
bifrost-common-constants = { default-features = false, path = "runtime/common/constants" }
bifrost-dev-constants = { default-features = false, path = "runtime/dev/constants" }
bifrost-testnet-constants = { default-features = false, path = "runtime/testnet/constants" }
bifrost-mainnet-constants = { default-features = false, path = "runtime/mainnet/constants" }
bifrost-common-runtime = { default-features = false, path = "runtime/common" }
bifrost-dev-runtime = { path = "runtime/dev" }
bifrost-testnet-runtime = { path = "runtime/testnet" }
bifrost-mainnet-runtime = { path = "runtime/mainnet" }

# Bifrost Client
bifrost-common-node = { path = "node/common" }
bifrost-dev-node = { path = "node/dev" }
bifrost-testnet-node = { path = "node/testnet" }
bifrost-mainnet-node = { path = "node/mainnet" }

# Bifrost Frame
pallet-bfc-staking = { default-features = false, path = "pallets/bfc-staking" }
pallet-bfc-utility = { default-features = false, path = "pallets/bfc-utility" }
pallet-bfc-offences = { default-features = false, path = "pallets/bfc-offences" }
pallet-relay-manager = { default-features = false, path = "pallets/relay-manager" }
pallet-btc-registration-pool = { default-features = false, path = "pallets/btc-registration-pool" }
pallet-btc-socket-queue = { default-features = false, path = "pallets/btc-socket-queue" }
pallet-blaze = { default-features = false, path = "pallets/blaze" }
pallet-bifrost-evm-tx-payment = { default-features = false, path = "pallets/bifrost-evm-tx-payment" }
pallet-oracle-registry = { default-features = false, path = "pallets/oracle-registry" }

# Bifrost Precompile
precompile-bfc-staking = { default-features = false, path = "precompiles/bfc-staking" }
precompile-bfc-offences = { default-features = false, path = "precompiles/bfc-offences" }
precompile-relay-manager = { default-features = false, path = "precompiles/relay-manager" }
precompile-governance = { default-features = false, path = "precompiles/governance" }
precompile-collective = { default-features = false, path = "precompiles/collective" }
precompile-balance = { default-features = false, path = "precompiles/balance" }
precompile-btc-registration-pool = { default-features = false, path = "precompiles/btc-registration-pool" }
precompile-btc-socket-queue = { default-features = false, path = "precompiles/btc-socket-queue" }
precompile-blaze = { default-features = false, path = "precompiles/blaze" }
precompile-bifrost-evm-tx-payment = { default-features = false, path = "precompiles/bifrost-evm-tx-payment" }
# Substrate Client
sc-cli = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-client-api = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-rpc = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-transaction-pool = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-transaction-pool-api = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-chain-spec = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-consensus = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-consensus-aura = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-consensus-grandpa = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-consensus-grandpa-rpc = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-consensus-manual-seal = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-network = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-network-sync = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-service = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-executor = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-telemetry = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-basic-authorship = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
substrate-prometheus-endpoint = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sc-offchain = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }

# Cumulus
cumulus-primitives-proof-size-hostfunction = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }

# Substrate Primitive
sp-io = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-api = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-block-builder = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-blockchain = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-consensus = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-consensus-aura = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-core = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-inherents = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-offchain = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-runtime = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-session = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-std = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-transaction-pool = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-version = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-staking = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-timestamp = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
sp-genesis-builder = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }

# Substrate FRAME
substrate-frame-rpc-system = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
frame-system = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
frame-support = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
frame-executive = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
frame-metadata-hash-extension = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
frame-benchmarking = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
frame-benchmarking-cli = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-aura = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-balances = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-grandpa = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-sudo = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-timestamp = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-transaction-payment-rpc = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-scheduler = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-session = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-authorship = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-utility = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-collective = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-democracy = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-membership = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-migrations = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-im-online = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-offences = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-treasury = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-identity = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-preimage = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-safe-mode = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
pallet-tx-pause = { default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }

# Substrate Builds
substrate-wasm-builder = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }
substrate-build-script-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-stable2512" }

# Frontier Client
fc-db = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
fc-rpc = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512", features = [
    "txpool",
] }
fc-mapping-sync = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
fc-rpc-core = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
fc-rpc-debug = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
fc-rpc-trace = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
fc-api = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }

# Frontier Primitive
fp-self-contained = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
fp-account = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
fp-evm = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
fp-ext = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
fp-rpc = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
fp-rpc-debug = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
fp-rpc-txpool = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }

# Frontier Runtime
evm-tracer = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }

# Frontier FRAME
pallet-evm = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
pallet-ethereum = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
pallet-base-fee = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
pallet-evm-precompile-bn128 = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }
pallet-evm-precompile-blake2 = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }

# Frontier Utilities
precompile-utils = { default-features = false, git = "https://github.com/bifrost-platform/bifrost-frontier", branch = "bifrost-polkadot-stable2512" }

# Patch to use local bifrost-frontier for testing
#[patch."https://github.com/bifrost-platform/bifrost-frontier"]
#fc-db = { path = "../bifrost-frontier/client/db" }
#fc-rpc = { path = "../bifrost-frontier/client/rpc" }
#fc-mapping-sync = { path = "../bifrost-frontier/client/mapping-sync" }
#fc-rpc-core = { path = "../bifrost-frontier/client/rpc-core" }
#fc-rpc-debug = { path = "../bifrost-frontier/client/bifrost/rpc/debug" }
#fc-rpc-trace = { path = "../bifrost-frontier/client/bifrost/rpc/trace" }
#fc-api = { path = "../bifrost-frontier/client/api" }
#fp-self-contained = { path = "../bifrost-frontier/primitives/self-contained" }
#fp-account = { path = "../bifrost-frontier/primitives/account" }
#fp-evm = { path = "../bifrost-frontier/primitives/evm" }
#fp-ext = { path = "../bifrost-frontier/primitives/bifrost/ext" }
#fp-rpc = { path = "../bifrost-frontier/primitives/rpc" }
#fp-rpc-debug = { path = "../bifrost-frontier/primitives/bifrost/rpc/debug" }
#fp-rpc-txpool = { path = "../bifrost-frontier/primitives/bifrost/rpc/txpool" }
#fp-ethereum = { path = "../bifrost-frontier/primitives/ethereum" }
#evm-tracer = { path = "../bifrost-frontier/runtime/evm-tracer" }
#pallet-evm = { path = "../bifrost-frontier/frame/evm" }
#pallet-ethereum = { path = "../bifrost-frontier/frame/ethereum" }
#pallet-base-fee = { path = "../bifrost-frontier/frame/base-fee" }
#pallet-evm-precompile-simple = { path = "../bifrost-frontier/frame/evm/precompile/simple" }
#pallet-evm-precompile-bn128 = { path = "../bifrost-frontier/frame/evm/precompile/bn128" }
#pallet-evm-precompile-modexp = { path = "../bifrost-frontier/frame/evm/precompile/modexp" }
#pallet-evm-precompile-blake2 = { path = "../bifrost-frontier/frame/evm/precompile/blake2" }
#precompile-utils = { path = "../bifrost-frontier/precompiles" }
