[package]
name = "bifrost-common-node"
version = "1.0.0"
description = "The common code shared between node specifications for BIFROST Node"
authors = { workspace = true }
homepage = { workspace = true}
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# third-party dependencies
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }

# substrate client dependencies
sc-client-api = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-chain-spec = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-finality-grandpa = { workspace = true }
sc-finality-grandpa-rpc = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }

# substrate primitives dependencies
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true, features = ["std"] }

# Frontier dependencies
fc-db = { workspace = true }
fc-rpc = { workspace = true, features = ["rpc-binary-search-estimate"] }
fc-rpc-core = { workspace = true }
fp-rpc-debug = { workspace = true }
fp-storage = { workspace = true }
fp-rpc = { workspace = true }
fc-rpc-debug = { workspace = true }
fc-rpc-trace = { workspace = true }

# Local Dependencies
bp-core = { workspace = true }

[features]
default = []
runtime-benchmarks = []
