[package]
name = "bifrost-node"
version = "1.2.4"
description = "The node specification for BIFROST Node"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "bifrost-node"

[dependencies]
# third-party dependencies
clap = { workspace = true }

# substrate client dependencies
sc-cli = { workspace = true }
sc-service = { workspace = true }
sc-consensus-grandpa = { workspace = true }

# benchmarking dependencies
frame-benchmarking = { workspace = true, features = ["std"] }
frame-benchmarking-cli = { workspace = true }

# Bifrost runtimes
bifrost-dev-runtime = { workspace = true, features = ["std", "evm-tracing"] }
bifrost-testnet-runtime = { workspace = true, features = [
	"std",
	"evm-tracing",
] }
bifrost-mainnet-runtime = { workspace = true, features = [
	"std",
	"evm-tracing",
] }

# Bifrost node specs
bifrost-common-node = { workspace = true }
bifrost-dev-node = { workspace = true }
bifrost-testnet-node = { workspace = true }
bifrost-mainnet-node = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = []
