[package]
name = "bifrost-node"
version = "2.1.1"
description = "The node client implementation for Bifrost"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "bifrost-node"

[dependencies]
# third-party dependencies
clap = { workspace = true }

# substrate primitive dependencies
sp-runtime = { workspace = true, features = ["std"] }

# substrate client dependencies
sc-cli = { workspace = true }
sc-service = { workspace = true }
sc-consensus-grandpa = { workspace = true }

# benchmarking dependencies
frame-benchmarking-cli = { workspace = true }

# Bifrost runtimes
bifrost-dev-runtime = { workspace = true, features = ["std", "evm-tracing"] }
bifrost-testnet-runtime = { workspace = true, features = [
    "std",
    "evm-tracing",
] }
bifrost-mainnet-runtime = { workspace = true, features = [
    "std",
    "evm-tracing",
] }

# Bifrost node specs
bifrost-common-node = { workspace = true }
bifrost-dev-node = { workspace = true }
bifrost-testnet-node = { workspace = true }
bifrost-mainnet-node = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = [
    "bifrost-dev-runtime/runtime-benchmarks",
    "bifrost-testnet-runtime/runtime-benchmarks",
    "bifrost-mainnet-runtime/runtime-benchmarks",
    "bifrost-dev-node/runtime-benchmarks",
    "bifrost-testnet-node/runtime-benchmarks",
    "bifrost-mainnet-node/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
]
