[package]
name = "bifrost-dev-node"
version = "1.0.0"
description = "The node specification for BIFROST Node development"
authors = ["bifrost-platform"]
homepage = "https://thebifrost.io"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/bifrost-platform/bifrost-node"

[dependencies]
# third-party dependencies
serde_json = "1.0"
jsonrpc-core = "18.0.0"
futures = { version = "0.3" }
hex-literal = { version = "0.3.1" }
tokio = { version = "1.13.0", features = ["macros", "sync"] }

# substrate client dependencies
sc-client-api = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-executor = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3", features = ["wasmtime"] }
sc-service = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-transaction-pool = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-transaction-pool-api = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-consensus-manual-seal = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-consensus-aura = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-consensus = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-finality-grandpa = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-finality-grandpa-rpc = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-network = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-rpc = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-rpc-api = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-chain-spec = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sc-basic-authorship = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }

# substrate primitives dependencies
sp-core = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-runtime = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-api = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-keystore = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-consensus = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-consensus-aura = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-finality-grandpa = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-block-builder = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-blockchain = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
sp-timestamp = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }

# FRAME dependencies
pallet-bfc-staking = { path = "../../pallets/bfc-staking" }
pallet-im-online = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
pallet-transaction-payment-rpc = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
substrate-frame-rpc-system = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }

# Frontier dependencies
fc-db = { default-features = false, git = "https://github.com/bifrost-platform/frontier", branch = "bifrost-node-v1.1.3" }
fc-rpc = { default-features = false, git = "https://github.com/bifrost-platform/frontier", branch = "bifrost-node-v1.1.3", features = ["rpc_binary_search_estimate"] }
fc-rpc-core = { default-features = false, git = "https://github.com/bifrost-platform/frontier", branch = "bifrost-node-v1.1.3" }
fc-mapping-sync = { default-features = false, git = "https://github.com/bifrost-platform/frontier", branch = "bifrost-node-v1.1.3" }
fp-storage = { default-features = false, git = "https://github.com/bifrost-platform/frontier", branch = "bifrost-node-v1.1.3" }
fp-ext = { default-features = false, git = "https://github.com/bifrost-platform/frontier", branch = "bifrost-node-v1.1.3" }
fp-rpc = { default-features = false, git = "https://github.com/bifrost-platform/frontier", branch = "bifrost-node-v1.1.3" }
pallet-evm = { default-features = false, git = "https://github.com/bifrost-platform/frontier", branch = "bifrost-node-v1.1.3" }

# benchmarking dependencies
frame-benchmarking = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }
frame-benchmarking-cli = { git = "https://github.com/bifrost-platform/substrate", branch = "bifrost-node-v1.1.3" }

# Local Dependencies
bp-core = { path = "../../primitives/core" }
bifrost-dev-runtime = { path = "../../runtime/dev", features = ["std", "evm-tracing"] }
bifrost-dev-constants = { path = "../../runtime/dev/constants" }
bifrost-common-node = { path = "../common" }

[features]
default = []
runtime-benchmarks = [
	"bifrost-dev-runtime/runtime-benchmarks",
]
